AutoName operator do not update the display of the bone's name in the Bone Properties #36906

Closed
opened 2013-10-01 14:30:50 +02:00 by Sebastian Koenig · 3 comments

%%%--- Operating System, Graphics card ---
10.8.5, GTX660ti

- Blender version with error, and version that worked ---

r60479, it did work in 2.68a

- Short description of error ---

Using the autoname operators like for example FlipNames from the SpecialsMenu (W) in Armature EditMode doesn't update the bone's name in the Relations Panel of Bone Properties. However, it does update the display of the bone's name in the lower left corner of the 3d viewport.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open attached blendfile, hit W, then N, and watch the bone's name in the properties editor. It only updates if you move the mouse over it.

%%%

%%%--- Operating System, Graphics card --- 10.8.5, GTX660ti - Blender version with error, and version that worked --- r60479, it did work in 2.68a - Short description of error --- Using the autoname operators like for example FlipNames from the SpecialsMenu (W) in Armature EditMode doesn't update the bone's name in the Relations Panel of Bone Properties. However, it does update the display of the bone's name in the lower left corner of the 3d viewport. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open attached blendfile, hit W, then N, and watch the bone's name in the properties editor. It only updates if you move the mouse over it. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r60485.%%%

%%%fixed r60485.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36906
No description provided.