fix [#36906] AutoName operator do not update the display of the bone's name in the Bone Properties